--- a/skydance-app/package.json
+++ b/skydance-app/package.json
@@ -12,6 +12,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-date-pickers": "^8.16.0",
+    "dayjs": "^1.11.19",
     "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
